Added Responsive Main Display Feature

--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,12 @@
             <div class="main-header">
                 <nav id="left-nav">
                     <ul>
-                        <li><a href="#">NAVIGATION</a></li>
+                        <li><a href="#">MENU</a></li>
                         <li><a href="#">WALLETS</a></li>
                         <li><a href="#">PRODUCTS</a></li>
                     </ul>
                 </nav>
-                <img class="logo" src="./Assets/Images/logo.png">
+                <a href="#"><img class="logo" src="./Assets/Images/logo.png"></a>
                 <nav id="right-nav">
                     <ul>
                         <li><a href="#">SUPPORT</a></li>
@@ -28,6 +28,16 @@
                 </nav>
             </div>
         </header>
+        <div class="display">
+            <div class="desktop">
+                <img class="desktop-image" src="https://i.shgcdn.com/7a0997a5-73cf-403f-9935-cc36c789122d/-/format/auto/-/preview/3000x3000/-/quality/lighter/">
+            </div>
+            <div class="promo">
+                <p class="large-text">ALL WALLETS</p>
+                <P class="small-text">SAVE 15% WITH CODE DAD15</P>
+            </div>
+        </div>
+        
 
     </body>
 </html>
