--- a/Index.html
+++ b/Index.html
@@ -37,5 +37,7 @@
                 <P class="small-text">SAVE 15% WITH CODE DAD15</P>
             </div>
         </div>
+        michael sux
+        
     </body>
 </html>
